--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,26 @@ form{
     box-shadow: 0px 24px 40px rgba(43, 34, 100, 0.88);
 }
 
+.poemTopic{
+   padding: 10px;
+   border: 3px solid rgba(rgba(233, 17, 17, 0.863), rgba(24, 211, 24, 0.904), rgba(2, 2, 187, 0.788), 0.5); 
+   width: 80%;
+   font-size: 16px;
+   color: rgba(10, 10, 10, 0.863);
+   border-radius: 10px;
+}
+
+
+.submitButton{
+ margin-left: 10px;
+ background-color: #78287b7c; 
+ border-radius: 10px;  
+ color: rgba(34, 34, 32, 0.952);
+ width: 45%;
+ font-weight: bold;
+}
+
+
 .poem{
 font-size: 16px;
 background-color: white;
@@ -38,22 +58,10 @@ border-radius: 15px;
 box-shadow: 0px 24px 40px rgba(45, 34, 100, 0.88);
 }
 
-.poemTopic{
-   padding: 10px;
-   border: 3px solid rgba(rgba(233, 17, 17, 0.863), rgba(24, 211, 24, 0.904), rgba(2, 2, 187, 0.788), 0.5); 
-   width: 80%;
-   font-size: 16px;
-   color: rgba(10, 10, 10, 0.863);
-   border-radius: 10px;
-}
-
-.submitButton{
- margin-left: 10px;
- background-color: #78287b7c; 
- border-radius: 10px;  
- color: rgba(34, 34, 32, 0.952);
- width: 45%;
- font-weight: bold;
+.poem strong{
+ color: rgba(16, 46, 66, 0.678);  
+ text-shadow: 0px 24px 40px rgba(45, 34, 100, 0.88); 
+ font-weight: 500;
 }
 
 h1{
