--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@ body{
 } 
 .container{
  margin: 130px auto;
- max-width: 600px;   
+ max-width: 700px;   
 }
 
 header{
@@ -15,12 +15,17 @@ main{
 
 }
 
-form{
+.form-container{
     padding: 30px;
     background-color: white;
     border-radius: 20px;
-    display: flex;
     box-shadow: 0px 24px 40px rgba(43, 34, 100, 0.88);
+}
+
+form{
+    
+    display: flex;
+    
 }
 
 .poemTopic{
@@ -40,6 +45,18 @@ form{
  color: rgba(34, 34, 32, 0.952);
  width: 45%;
  font-weight: bold;
+ transform: perspective();
+}
+
+.submitButton:hover{
+    background-color: rgba(84, 70, 97, 0.281);
+}
+
+.example{
+  line-height: 1.5px;
+  font-size: 12px;
+  margin-top: 15px;
+  opacity: 0.6;  
 }
 
 
@@ -56,6 +73,19 @@ color: rgba(34, 34, 32, 0.952);
 border: 5px solid rgba(105, 58, 105, 0.596);
 border-radius: 15px;
 box-shadow: 0px 24px 40px rgba(45, 34, 100, 0.88);
+
+}
+
+.hidden{display: none;}
+
+@keyframes blink{
+    50% {
+        opacity: 0.0;
+    }
+}
+
+.blink{
+    animation: blink 2s step-start 0s infinite;
 }
 
 .poem strong{
@@ -73,6 +103,7 @@ h1{
 }
 
 footer{
+    margin-top: 15px;
     text-align: center;
     font-size: 15px;
 }
